Fix checkbox text alignment

--- a/less/_toolbars.less
+++ b/less/_toolbars.less
@@ -334,6 +334,7 @@ body .inspector-view-toolbar.status-bar::shadow .status-bar-item {
 body/deep/ .dt-checkbox-text,
 ::content .dt-checkbox-text {
 	color: @global-text !important;
+	margin-bottom: 3px !important;
 }
 
 // Network filter when a filter is applied but options are hidden
